==================================================
Version 0.1.1 (WIP)
==================================================

- Added in-memory encryption of OAuth token.


==================================================
Version 0.1.0 (2020-07-23)
==================================================

- First public version of Better.