@@ -4,7 +4,7 @@
 #include "better_types.h"
 #include "better_const.h"
 
-const u32 SETTINGS_VERSION = 1;
+const u32 SETTINGS_VERSION = 2;
 
 struct Settings
 {
@@ -29,6 +29,7 @@ struct Settings
     char points_name[POINTS_NAME_MAX] = "points";
 
     u64 starting_points = 100;
+    bool allow_multibets = true;
     u32 coyote_time = DEFAULT_COYOTE_TIME;
 
     bool announce_bets_open = true;
